// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserController DELETE /user/:id 1`] = `
Object {
  "createdAt": 2016-06-01T07:00:00.000Z,
  "email": "ben@twofer.co",
  "id": undefined,
  "name": "ben",
  "updatedAt": 2016-06-01T07:00:00.000Z,
}
`;

exports[`UserController GET /user/:id 1`] = `
Object {
  "createdAt": 2016-06-01T07:00:00.000Z,
  "email": "ben@twofer.co",
  "id": 1,
  "name": "ben",
  "updatedAt": 2016-06-01T07:00:00.000Z,
}
`;
